--- a/vercel.json
+++ b/vercel.json
@@ -6,4 +6,8 @@
     }
 
 ],   
+"rutes":[
+    {"src":"/(.*)",
+"dest":"/"}
+], 
 "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
